<resources>
    <string name="app_name">INSALES</string>
    <string name="proveedores">Proveedores</string>
    <string name="ventas">Ventas</string>
    <string name="productos">Productos</string>
    <string name="nuevoProveedor">+</string>
    <string name="proveedor1">Proveedor 1</string>
    <string name="proveedor2">Proveedor 2</string>
    <string name="proveedor3">Proveedor 3</string>
    <string name="tituloNuevoProveedor">Registrar nuevo proveedor</string>
    <string name="inputNombreProveedor">Nombre proveedor</string>
    <string name="inputTelefonoProveedor">Telefono</string>
    <string name="inputCorreoProveedor">Correo Electronico</string>
    <string name="guardarProveedor">Guardar</string>
    <string name="eliminar">Eliminado Correctamente</string>
    <string name="tituloDetalleProveedor">Detalle Proveedor</string>
    <string name="bottonVolver">Regresar</string>
    <string name="tituloActualizarProveedor">Actualizar información del proveedor</string>
    <string name="actualizarProveedor">Actualizar</string>
    <string name="producto1">Producto 1</string>
    <string name="producto2">Producto 2</string>
    <string name="producto3">Producto 3</string>
    <string name="tituloDetalleProducto">Detalle producto</string>
    <string name="tituloIdProducto">Id del producto</string>
    <string name="tituloNombreProducto">Nombre</string>
    <string name="tituloDescripcionProducto">Descripcion</string>
    <string name="tituloPrecioUnitario">Precio Unitario</string>
    <string name="tituloCantidadProducto">Cantidad</string>
    <string name="tituloNuevoProducto">Registrar nuevo producto</string>
    <string name="inputNombreProducto">Nombre del producto</string>
    <string name="inputDescripcionProducto">Descripcion</string>
    <string name="inputIdProducto">Id del producto</string>
    <string name="inputprecioProducto">Precio Unitario</string>
    <string name="inputCantidadProducto">Cantidad</string>
    <string name="buscarProducto">Buscar producto</string>
    <string name="agregar">Agregar</string>
    <string name="tuPago">Tu Pago</string>
    <string name="totalPedido">Total Pedido</string>
    <string name="vender">Vender</string>
</resources>